syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "Backend/pb";

message InputPasswordRequest {
    string SessionID = 1; 
    string Password = 2;
}

message InputPasswordResponse {
    string Message = 1;
    google.protobuf.Timestamp PasswordChangedAt = 3;
}

message ResetPasswordRequest {
    string SessionID = 1; 
    string Password = 2;
}

message ResetPasswordResponse {
    string Message = 1;
    google.protobuf.Timestamp PasswordChangedAt = 3;
}
